- fix rounded borders on ios

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -128,7 +128,11 @@ input[type="text"], input[type="password"]{
     display: block;
     margin: 0 auto;
     background-color: cornflowerblue;
+    -webkit-appearance:none;
+    -webkit-border-radius:0;
+    border-radius:0;
 }
+
 
 .item-content.lifeup-bg-dark {
     background-color: #333333;
